<resources>
    <string name="app_name">Warehouse</string>
    <string name="home_page">Home Page</string>
    <string name="todo">TODO</string>
    <string name="reports">Reports</string>
    <string name="manpower">Manpower</string>
    <string name="loading">Loading</string>
    <string name="search_material">Search Material</string>
    <string name="store_material">Store Material</string>
    <string name="material_in">Material IN</string>
    <string name="dipak_sunil_bansode">Dipak Sunil Bansode</string>
    <string name="material_no">Material No :</string>
    <string name="description">Description :</string>
    <string name="qty">Qty :</string>
    <string name="sloc">Sloc :</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="clear">CLEAR</string>
    <string name="ok">OK</string>
    <string name="supplier">Supplier :</string>
</resources>