<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Material_IN" >

    <Button
        android:id="@+id/QRscan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_scanner" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QRscan"
        android:layout_marginTop="-1dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:hint="@string/material_no"
            android:textStyle="bold"
            android:layout_marginBottom="40px"
            />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:hint="@string/description"
            android:textStyle="bold"
            android:layout_marginBottom="40px"
            />

        <EditText
            android:id="@+id/et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:hint="@string/qty"
            android:textStyle="bold"
            android:layout_marginBottom="40px"
            />

        <EditText
            android:id="@+id/et4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:hint="@string/supplier"
            android:textStyle="bold"
            android:layout_marginBottom="40px"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/button5"
            android:layout_margin="10px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button4"
            android:layout_margin="10px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1" />

    </LinearLayout>
    

</RelativeLayout>