<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".store_material">

    <Button
        android:id="@+id/QRscan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Scan Material" />

    <EditText
        android:layout_below="@id/QRscan"
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/material_no"
        android:textStyle="bold"
        android:layout_marginBottom="40px"
        />

    <Button
        android:layout_below="@id/et1"
        android:id="@+id/QRscan2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Scan Location QR code" />

    <EditText
        android:layout_below="@id/QRscan2"
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="Store Location Code:"
        android:textStyle="bold"
        android:layout_marginBottom="40px"
        />

    <TextView
        android:layout_below="@id/et2"
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Available Locations List :"
        android:textStyle="bold"
        android:textSize="20dp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@id/tv" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/btnclear"
            android:layout_margin="10px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnok"
            android:layout_margin="10px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>